fix : 채팅방 목록, 메시지 이력 dto 수정